--- a/FoodStore/Areas/Admin/Views/Categories/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Categories/Index.cshtml
@@ -30,10 +30,11 @@
             <td>
                 <a href="/Admin/Categories/Edit/@item.CategoryId"><i class="fa-solid fa-pen-to-square b"></i></a>
                 <a href="/Admin/Categories/Details/@item.CategoryId"><i class="fa-solid fa-circle-info g"></i></a>
-                <a href="/Admin/Categories/Delete/@item.CategoryId" class="Delete"><i class="fa-solid fa-trash r"></i></a>
+                <a href="/Admin/Categories/Delete/@item.CategoryId" id="Delete"><i class="fa-solid fa-trash r"></i></a>
             </td>
         </tr>
     }
 
 </table>
+<script src="~/Scripts/Delete.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.3/bootbox.min.js" integrity="sha512-U3Q2T60uOxOgtAmm9VEtC3SKGt9ucRbvZ+U3ac/wtvNC+K21Id2dNHzRUC7Z4Rs6dzqgXKr+pCRxx5CyOsnUzg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
