--- a/FoodStore/Areas/Admin/Views/Customers/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Customers/Index.cshtml
@@ -7,60 +7,69 @@
 
 <h5 class="text-center text-3xl font-weight-bolder p-3" style="background-color : beige">Quản Lý Khách Hàng </h5>
 
-
-@*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>*@
 <table class="table">
     <tr style="box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; padding: 10px; border-radius: 5px ">
-        <th>
-
-            Tên người dùng
-        </th>
-        <th>
-            Địa chỉ
-        </th>
-        <th>
-            Ngày sinh
-        </th>
-
-        <th>
-            Email
-        </th>
-        <th>
-            Số điện thoại
-        </th>
-
+        <th>Tên người dùng</th>
+        <th>Địa chỉ</th>
+        <th>Ngày sinh</th>
+        <th>Email</th>
+        <th>Số điện thoại</th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
+            <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+            <td>@Html.DisplayFor(modelItem => item.Address)</td>
+            <td>@Html.DisplayFor(modelItem => item.BirthDay)</td>
+            <td>@Html.DisplayFor(modelItem => item.Email)</td>
+            <td>@Html.DisplayFor(modelItem => item.Phone)</td>
             <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BirthDay)
-            </td>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-
-            <td>
-                <a href="/Admin/Customers/Edit/@item.CustomerId"><i class="fa-solid fa-pen-to-square b"></i></a>
+                @*<a href="/Admin/Customers/Edit/@item.CustomerId"><i class="fa-solid fa-pen-to-square b"></i></a>*@
                 <a href="/Admin/Customers/Details/@item.CustomerId"><i class="fa-solid fa-circle-info g"></i></a>
-                <a href="/Admin/Customers/Delete/@item.CustomerId" class="Delete"><i class="fa-solid fa-trash r"></i></a>
+                <a href="/Admin/Customers/Delete/@item.CustomerId" class="delete-link" id="Delete"><i class="fa-solid fa-trash r"></i></a>
             </td>
         </tr>
     }
-
 </table>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.3/bootbox.min.js" integrity="sha512-U3Q2T60uOxOgtAmm9VEtC3SKGt9ucRbvZ+U3ac/wtvNC+K21Id2dNHzRUC7Z4Rs6dzqgXKr+pCRxx5CyOsnUzg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script>
+    $(document).ready(function () {
+        // Hiển thị thông báo lỗi nếu có
+        var errorMessage = '@TempData["ErrorMessage"]';
+        if (errorMessage) {
+            bootbox.alert({
+                message: errorMessage,
+                backdrop: true
+            });
+        }
+
+        // Xác nhận trước khi xóa
+        $(".delete-link").click(function (e) {
+            e.preventDefault();
+            var url = $(this).attr("href");
+            bootbox.confirm({
+                message: "Bạn có chắc chắn muốn xóa khách hàng này không?",
+                buttons: {
+                    confirm: {
+                        label: 'Có',
+                        className: 'btn-success'
+                    },
+                    cancel: {
+                        label: 'Không',
+                        className: 'btn-danger'
+                    }
+                },
+                callback: function (result) {
+                    if (result) {
+                        window.location.href = url;
+                    }
+                }
+            });
+        });
+    });
+</script>
+<script src="~/Scripts/Delete.js"></script>
